# BAE_Sounds

./: Cargo.toml  README.md
src/: bae_block.rs  bae_channel.rs  bae_sound.rs  channel.rs  complex_sound.rs  lib.rs
tests/: sounds.rs
